--- a/5areas.html
+++ b/5areas.html
@@ -13,7 +13,7 @@
   <section>
     <div class="container">
       <div class="logoimage">
-        <a href = "index.html"><img src="images/SelfCareDesign2.png"></a>
+        <a href="index.html"><img src="images/SelfCareDesign2_2.png"></a>
       </div>
       <header class="wrapper"> Self-Care for your Mind, Body & Soul</header>
       <h1>Action Planning for Personal Happiness</h1>
