--- a/evaluation.html
+++ b/evaluation.html
@@ -13,7 +13,7 @@
   <section>
     <div class="container">
       <div class="logoimage">
-        <a href = "index.html"><img src="images/SelfCareDesign2.png"></a>
+        <a href="index.html"><img src="images/SelfCareDesign2_2.png"></a>
       </div>
       <header class="wrapper"> Self-Care for your Mind, Body & Soul</header>
       <h1>Action Planning for Personal Happiness</h1>
@@ -42,7 +42,7 @@
     <section>
       <div class="container6">
         <div class="lightbulb3">
-          <img src="images/lightbulb2.png" alt="lightbulb2">
+          <img src="images/lightbulb2_2.png" alt="lightbulb2">
         </div>
         <p>Evaluating your commitment and progress includes reviewing your journal and experience. Think about and write
           down the following:
@@ -60,15 +60,15 @@
         </p>
       </div>
 
-    </div>
+      </div>
 
 
   </main>
   <a href="https://github.com/svehnon/Assignment2/blob/master/SelfCare.pdf" class="button button-blue">Download the
     Self-Care
     Guidebook</a>
- 
-<footer></footer>
+
+  <footer></footer>
   <footer>
     Images by Stephanie Vehnon, other information based on experience.
   </footer>
