--- a/benefits.html
+++ b/benefits.html
@@ -13,7 +13,7 @@
   <section>
     <div class="container">
       <div class="logoimage">
-        <a href = "index.html"><img src="images/SelfCareDesign2.png"></a>
+        <a href="index.html"><img src="images/SelfCareDesign2_2.png"></a>
       </div>
       <header class="wrapper"> Self-Care for your Mind, Body & Soul</header>
       <h1>Action Planning for Personal Happiness</h1>
@@ -40,7 +40,7 @@
     <section>
       <div class="container4">
         <div class="lightbulb3">
-          <img src="images/lightbulb2.png" alt="lightbulb2">
+          <img src="images/lightbulb2_2.png" alt="lightbulb2">
         </div>
         <p>Based on my experiences, the following have proven to be benefits of regular self-care:
         <div id="list">
@@ -63,8 +63,8 @@
       </div>
 
 
-      
-      </section>
+
+    </section>
   </main>
   <a href="https://github.com/svehnon/Assignment2/blob/master/SelfCare.pdf" class="button button-blue">Download the
     Self-Care
