--- a/planning.html
+++ b/planning.html
@@ -13,7 +13,7 @@
   <section>
     <div class="container">
       <div class="logoimage">
-        <a href = "index.html"><img src="images/SelfCareDesign2.png"> </a>
+        <a href="index.html"><img src="images/SelfCareDesign2_2.png"> </a>
       </div>
       <header class="wrapper"> Self-Care for your Mind, Body & Soul</header>
       <h1>Action Planning for Personal Happiness</h1>
@@ -43,7 +43,7 @@
     <section>
       <div class="container5">
         <div class="lightbulb3">
-          <img src="images/lightbulb2.png" alt="lightbulb2">
+          <img src="images/lightbulb2_2.png" alt="lightbulb2">
         </div>
         <p>How to plan, so you can benefit most from self-care exploration and activities:
         <div id="list">
@@ -70,7 +70,7 @@
     Self-Care
     Guidebook</a>
 
-    <footer></footer>
+  <footer></footer>
   <footer>
     Images by Stephanie Vehnon, other information based on experience.
   </footer>
