--- a/benefits.html
+++ b/benefits.html
@@ -33,8 +33,7 @@
   </nav>
 
   <main>
-    <h2> Planning in any aspect can be beneficial! If you make a plan and schedule, you are more likely to succeed in
-      your self-care journey. </h2>
+    <h2> There are many benefits to taking care of yourself! We all need to show a lil' love towards ourself. We cannot fully love or appreciate another until we love ourself! </h2>
     <!-- BENEFITS ------------------------------------------->
     <!-- <section class="container2"> -->
     <section>
